# nodalync-protocol

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DECISIONS.md  Dockerfile  L2_IMPLEMENTATION_PLAN.md  L2_SPEC_ADDENDUM.md  LICENSE  LICENSE-APACHE  QUICKSTART.md  README.md  book.toml  docker-compose.yml  install.ps1  install.sh  obsidian_l2_graph.db
apps/desktop/: Cargo.toml  README.md  STUDIO-PLAN.md  TAURI-IPC-REFERENCE.md  create-icons.ps1  index.html  obsidian_l2_graph.db  package-lock.json  package.json  ralph-loop.ps1  tailwind.config.js  tauri.conf.json  vite.config.js
apps/desktop/rust-src/: channel_commands.rs  cli.rs  discovery_commands.rs  event_loop.rs  fee_commands.rs  graph_commands.rs  health_monitor.rs  hip991_commands.rs  invite.rs  main.rs  mock_cli.rs  network_commands.rs  peer_store.rs  protocol.rs  publish_commands.rs  seed_store.rs  state.rs  types.rs  x402_commands.rs
apps/desktop/src/: App.jsx  index.css
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src/components/: BalanceDashboard.jsx  CommandPalette.jsx  ContentLibrary.jsx  CreateContentDialog.jsx  EntityDetailPanel.jsx  GraphLegend.jsx  GraphView.jsx  KnowledgeImport.jsx  ProtocolLedger25D.jsx  SearchBar.jsx  Sidebar.jsx  StatsBar.jsx
apps/desktop/src/hooks/: useTauriEvents.js
apps/desktop/src/lib/: communityDetection.js  constants.js
crates/apps/nodalync-cli/: Cargo.toml
crates/apps/nodalync-cli/src/: alerting.rs  cli.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  metrics.rs  node_runner.rs  output.rs  progress.rs  prompt.rs  signals.rs  wizard.rs
crates/nodalync/: Cargo.toml  README.md
crates/nodalync-bench/: Cargo.toml
crates/nodalync-bench/benches/: crypto_bench.rs  storage_bench.rs  wire_bench.rs
crates/nodalync-cli/: Cargo.toml
crates/nodalync-cli/src/: alerting.rs  cli.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  metrics.rs  node_runner.rs  output.rs  progress.rs  prompt.rs
crates/nodalync-cli/src/commands/: build_l2.rs  completions.rs  delete.rs  deposit.rs  earnings.rs  init.rs  list.rs  mcp_server.rs  merge_l2.rs  mod.rs  preview.rs  publish.rs  query.rs  reference.rs  search.rs  settle.rs  start.rs  status.rs  stop.rs  synthesize.rs  update.rs  versions.rs  visibility.rs  whoami.rs
crates/nodalync-crypto/: Cargo.toml
crates/nodalync-crypto/src/: hash.rs  identity.rs  lib.rs  serde_impl.rs
crates/nodalync-crypto/tests/: hash_tests.rs  identity_tests.rs  signature_tests.rs
crates/nodalync-graph/: Cargo.toml
crates/nodalync-graph/src/: entity_extraction.rs  error.rs  lib.rs  schema.rs  subgraph.rs
crates/nodalync-graph/tests/: integration_tests.rs
crates/nodalync-mcp/: Cargo.toml
crates/nodalync-mcp/src/: budget.rs  error.rs  lib.rs  server.rs  tools.rs
crates/nodalync-net/: Cargo.toml
crates/nodalync-net/src/: behaviour.rs  config.rs  error.rs  event.rs  lib.rs  node.rs  peer_id.rs  traits.rs  transport.rs
crates/nodalync-net/tests/: integration.rs  multi_node.rs
crates/nodalync-ops/: Cargo.toml
crates/nodalync-ops/src/: channel.rs  config.rs  content.rs  error.rs  handlers.rs  helpers.rs  l2.rs  lib.rs  node_ops.rs  ops.rs  publish.rs  query.rs  settlement.rs
crates/nodalync-ops/src/extraction/: rule_based.rs
crates/nodalync-ops/tests/: e2e_economic_loop.rs  l2_integration.rs
crates/nodalync-settle/: Cargo.toml
crates/nodalync-settle/src/: faucet.rs  hedera.rs  lib.rs  mock.rs  retry.rs  types.rs
crates/nodalync-settle/tests/: dispute_resolution.rs  hedera_connectivity.rs
crates/nodalync-test-utils/: Cargo.toml
crates/nodalync-test-utils/src/: helpers.rs  lib.rs  mock_network.rs  mock_settlement.rs
crates/nodalync-valid/: Cargo.toml
crates/nodalync-valid/src/: content.rs  error.rs  l2.rs  lib.rs  message.rs  payment.rs  provenance.rs  validator.rs  version.rs
crates/nodalync-wire/: Cargo.toml
crates/nodalync-wire/src/: encoding.rs  error.rs  lib.rs  message.rs  payload.rs
crates/nodalync/src/: lib.rs
crates/protocol/nodalync-crypto/: Cargo.toml
crates/protocol/nodalync-crypto/src/: error.rs  hash.rs  lib.rs  serde_impl.rs  signature.rs
crates/protocol/nodalync-net/: Cargo.toml
crates/protocol/nodalync-net/src/: behaviour.rs  codec.rs  config.rs  error.rs  event.rs  lib.rs  node.rs  traits.rs  transport.rs
crates/protocol/nodalync-net/tests/: e2e_content_exchange.rs  mock_network.rs  multi_node.rs
crates/protocol/nodalync-ops/: Cargo.toml
crates/protocol/nodalync-ops/src/: channel.rs  config.rs  content.rs  error.rs  handlers.rs  l2.rs  lib.rs  node_ops.rs  peer_key_lookup.rs  publish.rs  query.rs  settlement.rs
crates/protocol/nodalync-ops/tests/: e2e_economic_loop.rs  mock_e2e.rs  signature_verification.rs
crates/protocol/nodalync-settle/: Cargo.toml
crates/protocol/nodalync-settle/src/: account_mapping.rs  config.rs  error.rs  faucet.rs  hedera.rs  lib.rs  retry.rs  topic.rs  traits.rs  types.rs
crates/protocol/nodalync-settle/tests/: dispute_resolution.rs  hedera_connectivity.rs  mock_settlement.rs
crates/protocol/nodalync-store/: Cargo.toml
crates/protocol/nodalync-store/src/: cache.rs  channel.rs  error.rs  identity.rs  lib.rs  manifest.rs  peers.rs  provenance.rs  schema.rs  settlement.rs  traits.rs
crates/protocol/nodalync-types/: Cargo.toml
crates/protocol/nodalync-types/src/: channel.rs  enums.rs  lib.rs  manifest.rs
crates/protocol/nodalync-valid/: Cargo.toml
crates/protocol/nodalync-valid/src/: access.rs  content.rs  lib.rs  message.rs  payment.rs  validator.rs  version.rs
crates/protocol/nodalync-wire/: Cargo.toml
crates/protocol/nodalync-wire/src/: encoding.rs  lib.rs  message.rs  payload.rs
crates/protocol/nodalync-x402/: Cargo.toml
crates/protocol/nodalync-x402/src/: error.rs  facilitator.rs  (+3 more)
examples/01-basic-node-setup/: Cargo.toml  README.md
examples/01-basic-node-setup/src/: main.rs
examples/02-network-communication/: Cargo.toml
examples/02-network-communication/src/: main.rs
examples/04-mcp-integration/: Cargo.toml
examples/04-mcp-integration/src/: main.rs
(+149 files in other folders)
