[workspace]
resolver = "2"
members = [
    "crates/nodalync",
    "crates/nodalync-crypto",
    "crates/nodalync-types",
    "crates/nodalync-wire",
    "crates/nodalync-store",
    "crates/nodalync-valid",
    "crates/nodalync-econ",
    "crates/nodalync-ops",
    "crates/nodalync-net",
    "crates/nodalync-settle",
    "crates/nodalync-cli",
    "crates/nodalync-mcp",
]

[workspace.package]
# Note: version is NOT workspace-inherited. See VERSIONING below.
# Protocol crates: 0.2.x (matches spec)
# Application crates: 0.5.x (CLI/MCP releases)
edition = "2021"
license = "MIT"
repository = "https://github.com/nodalync/nodalync"
authors = ["Gabriel Giangi <gabegiangi@gmail.com>"]

[workspace.dependencies]
# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
ciborium = "0.2"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"

# Async
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "dns", "kad", "gossipsub", "request-response", "macros"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
indicatif = "0.17"
colored = "2.1"
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3.10"

# MCP
rmcp = { version = "0.8", features = ["server", "transport-io"] }
serde_json = "1.0"

# Metrics (disable protobuf feature to avoid RUSTSEC-2024-0437)
prometheus = { version = "0.13", default-features = false }

# Internal crates (use path for local development)
nodalync-crypto = { path = "crates/nodalync-crypto" }
nodalync-types = { path = "crates/nodalync-types" }
nodalync-wire = { path = "crates/nodalync-wire" }
nodalync-store = { path = "crates/nodalync-store" }
nodalync-valid = { path = "crates/nodalync-valid" }
nodalync-econ = { path = "crates/nodalync-econ" }
nodalync-ops = { path = "crates/nodalync-ops" }
nodalync-net = { path = "crates/nodalync-net" }
nodalync-settle = { path = "crates/nodalync-settle" }
nodalync-mcp = { path = "crates/nodalync-mcp" }

[profile.release]
lto = true
codegen-units = 1
