[workspace]
resolver = "2"
members = [
    "crates/nodalync",
    "crates/nodalync-test-utils",
    "crates/nodalync-bench",
    "crates/nodalync-graph",
    "crates/protocol/nodalync-crypto",
    "crates/protocol/nodalync-types",
    "crates/protocol/nodalync-wire",
    "crates/protocol/nodalync-store",
    "crates/protocol/nodalync-valid",
    "crates/protocol/nodalync-econ",
    "crates/protocol/nodalync-ops",
    "crates/protocol/nodalync-net",
    "crates/protocol/nodalync-settle",
    "crates/apps/nodalync-cli",
    "crates/apps/nodalync-mcp",
]

[workspace.package]
# Note: version is NOT workspace-inherited. See VERSIONING below.
# Protocol crates: 0.4.x (matches spec)
# Application crates: 0.7.x (CLI/MCP releases)
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nodalync/nodalync"
authors = ["Gabriel Giangi <gabegiangi@gmail.com>"]

[workspace.dependencies]
# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
ciborium = "0.2"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"

# Async
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "dns", "kad", "gossipsub", "request-response", "identify", "ping", "macros", "tokio"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
indicatif = "0.17"
colored = "2.1"
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3.10"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# MCP
rmcp = { version = "0.8", features = ["server", "transport-io"] }
serde_json = "1.0"

# Metrics (disable protobuf feature to avoid RUSTSEC-2024-0437)
prometheus = { version = "0.13", default-features = false }

# Internal crates (use path for local development)
nodalync-crypto = { path = "crates/protocol/nodalync-crypto" }
nodalync-types = { path = "crates/protocol/nodalync-types" }
nodalync-wire = { path = "crates/protocol/nodalync-wire" }
nodalync-store = { path = "crates/protocol/nodalync-store" }
nodalync-valid = { path = "crates/protocol/nodalync-valid" }
nodalync-econ = { path = "crates/protocol/nodalync-econ" }
nodalync-ops = { path = "crates/protocol/nodalync-ops" }
nodalync-net = { path = "crates/protocol/nodalync-net" }
nodalync-settle = { path = "crates/protocol/nodalync-settle" }
nodalync-test-utils = { path = "crates/nodalync-test-utils" }
nodalync-mcp = { path = "crates/apps/nodalync-mcp" }

[profile.release]
lto = true
codegen-units = 1