[package]
name = "nodalync-desktop"
version = "0.1.0"
description = "Nodalync Studio — Knowledge graph desktop application"
authors = ["Nodalync Protocol Team"]
edition = "2021"

# Exclude from parent workspace
[workspace]

[[bin]]
name = "nodalync-desktop"
path = "rust-src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
regex = "1.0"
hex = "0.4"

# L2 Graph DB — the Phase 1 foundation
nodalync-graph = { path = "../../crates/nodalync-graph" }

# Protocol crates — powers publish, peer, content discovery
nodalync-crypto = { path = "../../crates/protocol/nodalync-crypto" }
nodalync-types = { path = "../../crates/protocol/nodalync-types" }
nodalync-store = { path = "../../crates/protocol/nodalync-store" }
nodalync-ops = { path = "../../crates/protocol/nodalync-ops" }
nodalync-net = { path = "../../crates/protocol/nodalync-net" }
nodalync-wire = { path = "../../crates/protocol/nodalync-wire" }
nodalync-econ = { path = "../../crates/protocol/nodalync-econ" }

# Platform utilities
directories = "5.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
