[package]
name = "nodalync-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Performance benchmarks for the Nodalync protocol"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "wire_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[dependencies]
criterion = { workspace = true }
nodalync-crypto = { workspace = true }
nodalync-types = { workspace = true }
nodalync-wire = { workspace = true }
nodalync-store = { workspace = true }
nodalync-valid = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }