[package]
name = "nodalync-cli"
version = "0.5.0"
edition.workspace = true
description = "Command-line interface for the Nodalync protocol"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
nodalync-crypto.workspace = true
nodalync-types.workspace = true
nodalync-wire.workspace = true
nodalync-store.workspace = true
nodalync-valid.workspace = true
nodalync-econ.workspace = true
nodalync-ops.workspace = true
nodalync-net.workspace = true
nodalync-settle.workspace = true
nodalync-mcp.workspace = true

# CLI
clap.workspace = true
indicatif.workspace = true
colored.workspace = true
dialoguer.workspace = true

# Async
tokio.workspace = true

# libp2p identity (for keypair conversion)
libp2p = { workspace = true, features = ["ed25519"] }

# Serialization
serde.workspace = true
serde_json = "1"
toml = "0.8"
ciborium.workspace = true

# Config and paths
directories.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
prometheus.workspace = true

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"
daemonize = "0.5"
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
hedera = ["nodalync-settle/hedera-sdk"]

[[bin]]
name = "nodalync"
path = "src/main.rs"
