[package]
name = "nodalync-graph"
version = "0.1.0"
edition = "2021"
description = "L2 Graph SQLite layer for Obsidian vault knowledge extraction"

[[bin]]
name = "obsidian-graph"
path = "src/bin/obsidian_graph.rs"

[dependencies]
# SQLite database  
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and crypto
walkdir = "2.4"
sha2 = "0.10"

# Time handling  
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex for entity extraction
regex = "1.10"

# YAML frontmatter parsing
serde_yaml = "0.9"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime for potential AI API calls
tokio = { version = "1.35", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = []
ai-extraction = ["tokio", "reqwest"]