[package]
name = "basic-node-setup"
version = "0.1.0"
edition = "2021"
description = "Basic Nodalync protocol node setup and content validation example"

[dependencies]
# Core Nodalync protocol crates
nodalync-types = { path = "../../crates/protocol/nodalync-types" }
nodalync-crypto = { path = "../../crates/protocol/nodalync-crypto" } 
nodalync-valid = { path = "../../crates/protocol/nodalync-valid" }
nodalync-store = { path = "../../crates/protocol/nodalync-store" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "basic-node-setup"
path = "src/main.rs"