[package]
name = "mcp-integration"
version = "0.1.0"
edition = "2021"
description = "AI agent integration with Nodalync via Model Context Protocol (MCP)"

[dependencies]
# Nodalync MCP server
nodalync-mcp = { path = "../../crates/apps/nodalync-mcp" }

# Core protocol crates
nodalync-types = { path = "../../crates/protocol/nodalync-types" }
nodalync-crypto = { path = "../../crates/protocol/nodalync-crypto" }
nodalync-econ = { path = "../../crates/protocol/nodalync-econ" }

# MCP and async
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[[bin]]
name = "mcp-integration"
path = "src/main.rs"