[package]
name = "nodalync-mcp-example"
version = "0.1.0"
edition = "2021"
description = "Example: Nodalync MCP server programmatic usage"

[dependencies]
nodalync-mcp = { path = "../../crates/apps/nodalync-mcp", default-features = false }

tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[[bin]]
name = "nodalync-mcp-example"
path = "src/main.rs"
