[package]
name = "nodalync-desktop"
version = "0.1.0"
description = "Nodalync Studio — Desktop application for knowledge graph visualization"
authors = ["Nodalync Protocol Team"]
edition = "2021"

[lib]
name = "nodalync_desktop"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open", "tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"

# L2 Graph DB integration
nodalync-graph = { path = "../../../crates/nodalync-graph" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]