[package]
name = "nodalync-crypto"
version = "0.7.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cryptographic primitives for the Nodalync protocol"

[dependencies]
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
