[package]
name = "nodalync-net"
version = "0.7.1"
edition.workspace = true

[dependencies]
# Nodalync crates
nodalync-crypto = { workspace = true }
nodalync-types = { workspace = true }
nodalync-wire = { workspace = true }

# libp2p with required features
libp2p = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Cryptography (for GossipSub message IDs)
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "test-util"] }
nodalync-ops = { workspace = true }
nodalync-store = { workspace = true }
nodalync-econ = { workspace = true }
nodalync-test-utils = { workspace = true }
tempfile = "3.10"
