[package]
name = "nodalync-store"
version = "0.6.0"
edition.workspace = true
description = "Local storage layer for the Nodalync protocol"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
nodalync-crypto = { workspace = true }
nodalync-types = { workspace = true }
nodalync-wire = { workspace = true }

# Storage
rusqlite = { workspace = true }
directories = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Identity encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
