[package]
name = "nodalync-valid"
version = "0.4.0"
edition.workspace = true
description = "Validation rules for the Nodalync protocol"
license.workspace = true

[dependencies]
nodalync-types = { workspace = true }
nodalync-crypto = { workspace = true }
nodalync-wire = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
