[package]
name = "nodalync-wire"
version = "0.7.0"
edition.workspace = true
description = "Wire protocol serialization for Nodalync"
license.workspace = true

[dependencies]
# Internal dependencies
nodalync-crypto = { workspace = true }
nodalync-types = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"

# Error handling
thiserror = "1.0"

# Hashing for message hash computation
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"
