[package]
name = "nodalync-x402"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "x402 Payment Required protocol integration for Nodalync"

[dependencies]
# Internal
nodalync-crypto = { workspace = true }
nodalync-types = { workspace = true }
nodalync-econ = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async + HTTP
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Encoding
base64 = "0.22"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
